untitled/objects/Brief_Part__c.object
<CustomObject>
    <fields>
        <fullName>Brief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brief</label>
        <referenceTo>Brief__c</referenceTo>
        <relationshipLabel>Brief Parts</relationshipLabel>
        <relationshipName>Brief_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A bundle added to a brief</description>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Brief Parts</relationshipLabel>
        <relationshipName>Brief_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A document added to a brief.</description>
        <label>Document</label>
        <referenceTo>Documents__c</referenceTo>
        <relationshipLabel>Brief Parts</relationshipLabel>
        <relationshipName>Brief_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brief Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brief Addition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brief Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>